compiler/tools/fpp-check/test/component_instance_spec/undef_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_spec/undef_instance.fpp: 3.12
  instance c
           ^
error: undefined symbol c
